2006-10-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/scripts/web-browser.scm: reviewed blurbs and
	marked them for translation.

2006-10-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/FractalExplorer/Dialogs.c (explorer_dialog): removed
	null character (bug #362832).

2006-10-17  Sven Neumann  <sven@gimp.org>

	* app/tools/gimpfliptool.c
	* app/tools/gimpperspectivetool.c
	* app/tools/gimprotatetool.c
	* app/tools/gimpscaletool.c
	* app/tools/gimpsheartool.c: mention paths in the tooltips.

2006-10-17  Sven Neumann  <sven@gimp.org>

	* plug-ins/script-fu/script-fu-console.[ch]
	(script_fu_output_to_console): added a length parameter to avoid
	needless string duplication.

	* plug-ins/script-fu/scheme-wrapper.c (ts_output_string): changed
	accordingly.
	(my_err): in console mode, send error messages to the console.

2006-10-16  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/tinyscheme/scheme.c: Eliminated compiler warnings.

	* plug-ins/script-fu/scripts/script-fu-compat.init: Added 'nil'.

2006-10-16  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpitem.[ch]: removed the "floating" flag and the
	floating/sink API.

	(gimp_item_init): call g_object_force_floating() instead.

	* app/core/gimpimage.c
	* app/core/gimplayer.c
	* app/xcf/xcf-load.c
	* tools/pdbgen/pdb/drawable.pdb
	* tools/pdbgen/pdb/image.pdb: use combinations of
	g_object_ref_sink() and g_object_unref() instead of
	gimp_item_sink(). Use g_object_is_floating() instead of
	gimp_item_is_floating().

	* app/pdb/drawable_cmds.c
	* app/pdb/image_cmds.c: regenerated.

2006-10-16  Kevin Cozens  <kcozens@cvs.gnome.org>

	* configure.in: Set enable_python to yes if it wasn't set to no.
	Fixes display of Python status in "Optional Plug-Ins" section. 

	* plug-ins/script-fu/scripts/script-fu-compat.init: Added
	'the-environment'.

2006-10-16  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimplayertreeview.c: #include "core/gimp.h" for
	gimp_message().
