@@ -1,5 +1,11 @@
 2006-10-17  Sven Neumann  <sven@gimp.org>
 
+	* app/plug-in/gimppluginprocedure.c
+	(gimp_plug_in_procedure_set_image_types): include the procedure
+	name in the output on stderr.
+
+2006-10-17  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/script-fu/scripts/web-browser.scm: reviewed blurbs and
 	marked them for translation.
 
